--- a/src/Components/Home/navbar.css
+++ b/src/Components/Home/navbar.css
@@ -8,6 +8,8 @@
 .brand-title {
   font-size: 1.5rem;
   margin: 0.5rem;
+  color: black;
+  text-decoration: none;
 }
 .navLinks {
   background-color: #0c0c0b;
@@ -28,9 +30,11 @@
 
   margin-left: -9%;
 }
+
 .navLinks ul li {
   text-align: left;
   margin-top: 35px;
+  text-decoration: none;
 }
 
 .btn {
@@ -116,12 +120,17 @@
     width: 100%;
   }
 
-  .brand-title {
+  .brand-title Link {
     font-size: 1.5rem;
     margin: 0.5rem;
     font-family: "Jost", sans-serif;
+    color: black;
+    text-decoration: none;
   }
 
+  .brand-title {
+    text-decoration: none;
+  }
   .navHide {
     height: 100%;
     display: block;
@@ -137,6 +146,7 @@
     list-style: none;
     font-family: "Jost", sans-serif;
     margin: 1rem 1.5rem 0 1.5rem;
+    color: black;
   }
 
   .btn {
