--- a/src/Components/Home/navbar.css
+++ b/src/Components/Home/navbar.css
@@ -55,8 +55,9 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    width: 95%;
+    width: 90%;
     margin-left: 5%;
+    margin-right: 5%;
     overflow: hidden;
   }
 
@@ -68,7 +69,7 @@
 
   .navHide {
     height: 100%;
-
+    overflow: hidden;
     width: 70%;
     overflow: hidden;
     display: block;
@@ -77,17 +78,16 @@
   .navHide ul {
     display: flex;
     margin-left: 15%;
-    margin-top: 5%;
+    margin-top: 4%;
     padding: 0;
+
+    width: 100%;
   }
 
   .navHide li {
     list-style: none;
     font-family: "Jost", sans-serif;
-    margin: 1rem 1.5rem 0 1.5rem;
-  }
-
-  .navHide li a {
+    margin: 0 0 2% 11%;
     display: block;
     text-decoration: none;
     color: black;
