--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -443,6 +443,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     min-width: 1000px;
+    min-width: 801px;
   }
 
   .homeText {
@@ -474,12 +475,12 @@
     position: absolute;
     width: auto;
     height: auto;
-    max-width: 100%;
+    /* max-width: 100%; */
     min-height: 573px;
     min-width: 284px;
     top: -15%;
     right: -13%;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   .circle {
     height: 600px;
@@ -514,7 +515,7 @@
     grid-template-rows: 1fr 1fr;
     gap: 0px 20px;
     margin-bottom: 135px;
-    min-width: 1000px;
+    min-width: 801px;
 
     overflow: hidden;
     grid-template-areas:
@@ -622,6 +623,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+
+    min-width: 801px;
   }
   .cartoonWrap {
     position: relative;
@@ -629,7 +632,7 @@
     display: flex;
     margin-left: 7%;
     margin-right: 7%;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
   .cartoonWrap img {
     border-radius: 50%;
